--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "type": "debugpy",
             "request": "launch",
             "module": "pipeline",
-            "args": ["--input_data_folder", "UP_DOWN_stadiazione_CH_gimp"],
+            "args": ["--input_data_folder", "UP_DOWN_stadiazione_CH_gimp", "--from_pretrained", "resnet18"],
             "console": "integratedTerminal"
         }
     ]
