--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
             "type": "debugpy",
             "request": "launch",
             "module": "pipeline",
-            "args": ["--input_data_folder", "UP_DOWN_stadiazione_CH_gimp", "--from_pretrained", "resnet18"],
+            "args": ["--from-pretrained", "true", "--architecture", "resnet18", "--data-augmentation", "true"],
+            // "args": ["--input_data_folder", "UP_DOWN_stadiazione_CH_gimp", "--from_pretrained", "shufflenet_v2_x1_0"],
             "console": "integratedTerminal"
         }
     ]
