--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,12 +12,21 @@
             "console": "integratedTerminal"
         },
         {
-            "name": "Python: pipeline",
+            "name": "Python: single images",
             "type": "debugpy",
             "request": "launch",
-            "module": "pipeline",
+            "program": "${workspaceFolder}/pipeline.py",
             // "args": ["--architecture", "resnet18", "--from-pretrained"],
             "args": ["--architecture", "resnet18", "--from-pretrained", "--input-data-folder", "UP_DOWN_stadiazione_CH_gimp"],
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Python: single images k fold",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/pipeline.py",
+            // "args": ["--architecture", "resnet18", "--from-pretrained"],
+            "args": ["--architecture", "resnet34", "--from-pretrained", "--k-fold", "5", "--input-data-folder", "UP_DOWN_stadiazione_CH_gimp"],
             "console": "integratedTerminal"
         }
     ]
