--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,4 @@ cython_debug/
 UP_DOWN_stadiazione_CH_gimp/
 outputs_single_images/
 outputs_single_images_k_fold/
+outputs_single_images_weights/
