--- a/simple-images/.gitignore
+++ b/simple-images/.gitignore
@@ -164,3 +164,4 @@ UP_DOWN_stadiazione_CH_gimp/
 outputs_single_images/
 outputs_single_images_k_fold/
 outputs_single_images_weights/
+pipeline.log
