--- a/single-images/.gitignore
+++ b/single-images/.gitignore
@@ -165,5 +165,7 @@ outputs_single_images/
 outputs_single_images_k_fold/
 outputs_single_images_weights/
 outputs_single_images_weights_default_transforms/
+outputs_1d_images/
+outputs_3d_images/
 
 pipeline.log
