--- a/single-images/.vscode/launch.json
+++ b/single-images/.vscode/launch.json
@@ -17,7 +17,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/pipeline.py",
             // "args": ["--architecture", "resnet18", "--from-pretrained"],
-            "args": ["--architecture", "inception_v3", "--from-pretrained", "--data-augmentation", "--weights", "all"], //, "--input-data-folder", "UP_DOWN_stadiazione_CH_gimp"],
+            "args": ["--architecture", "resnext50_32x4d", "--from-pretrained", "--data-augmentation", "--weights", "IMAGENET1K_V1"], //, "--input-data-folder", "UP_DOWN_stadiazione_CH_gimp"],
             "console": "integratedTerminal"
         },
         {
