--- a/two-channels/.gitignore
+++ b/two-channels/.gitignore
@@ -159,9 +159,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-
 UP_DOWN_stadiazione_CH_gimp/
-outputs_single_images/
-outputs_single_images_k_fold/
-outputs_single_images_weights/
+outputs_2d/
 pipeline.log
