--- a/single-images/.gitignore
+++ b/single-images/.gitignore
@@ -167,5 +167,7 @@ outputs_single_images_weights/
 outputs_single_images_weights_default_transforms/
 outputs_1d_images/
 outputs_3d_images/
+random_selection/
+random_selection_k_fold/
 
 pipeline.log
