--- a/two-channels/.vscode/launch.json
+++ b/two-channels/.vscode/launch.json
@@ -17,7 +17,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/pipeline.py",
             // "args": ["--architecture", "resnet18", "--from-pretrained"],
-            "args": ["--architecture", "resnet50", "--from-pretrained", "--weights", "IMAGENET1K_V1"], //, "--input-data-folder", "UP_DOWN_stadiazione_CH_gimp"],
+            "args": ["--architecture", "resnet50", "--from-pretrained", "--data-augmentation", "--weights", "IMAGENET1K_V1", "--epochs", "3", "--learning-rate", "0.001", "--batch-size", "32"], //, "--input-data-folder", "UP_DOWN_stadiazione_CH_gimp"],
             "console": "integratedTerminal"
         },
         {
