three channel implemented

--- a/feature_level_fusion/three-channel/.gitignore
+++ b/feature_level_fusion/three-channel/.gitignore
@@ -161,11 +161,7 @@ cython_debug/
 
 
 UP_DOWN_stadiazione_CH_gimp/
-outputs_single_images/
-outputs_single_images_k_fold/
-outputs_single_images_weights/
-outputs_single_images_weights_default_transforms/
-outputs_1d_images/
-outputs_3d_images/
+outputs/
+outputs_k_fold/
 
 pipeline.log
